Support activity initial commit